[project]
name = "mypy-pytest-plugin"
requires-python = ">=3.12,<3.15"
version = "0.2.1"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"mypy_pytest_plugin" = "mypy_pytest_plugin", "mypy_pytest_plugin_types-stubs" = "mypy_pytest_plugin_types"}

[tool.setuptools.package-data]
"mypy_pytest_plugin_types" = ["*.pyi", "py.typed"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "E", "ERA", "F", "I", "N", "PT", "PYI", "RET", "RUF", "SIM", "UP", "W"]
extend-ignore = ["E501", "F811", "PT011", "PT012", "PYI041", "RET504", "SIM118"]
exclude = ["test_samples/"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.mypy]
warn_unreachable = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
exclude = "test_samples"
plugins = ["plugin.py"]

[[tool.mypy.overrides]]
module = "pytest_snapshot.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "*_test.py"
addopts = '--capture=sys'
norecursedirs = ["test_samples"]
pythonpath = ["."]
