[project]
name = "mypy-pytest-plugin"
requires-python = ">=3.12,<3.15"
version = "2.1.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["version.txt"]}

[tool.setuptools.package-dir]
"mypy_pytest_plugin" = "mypy_pytest_plugin"
"mypy_pytest_plugin_types-stubs" = "mypy_pytest_plugin_types"

[tool.setuptools.package-data]
"mypy_pytest_plugin_types" = ["*.pyi", "py.typed"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
